[package]
name = "mirth_engine_tickers"
version = "0.0.1"
edition = "2024"
description = "A Bevy plugin with types (and their systems) purposed for tracking continously changing values over a given period of time."
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.19.0"
mirth_engine_testing_tools = "0.0.3"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = [
    "ticker_reflect",
    "ticker_serialize",
    "ticker_type_i32_f32",
    "ticker_systems_i32_f32",
]

########################### TICKER FEATURES ###############################
ticker_reflect = []
ticker_serialize = ["serde"]

ticker_type_i8_f32 = []
ticker_type_i16_f32 = []
ticker_type_i32_f32 = []
ticker_type_i8_f64 = []
ticker_type_i16_f64 = []
ticker_type_i32_f64 = []

ticker_systems_i8_f32 = []
ticker_systems_i16_f32 = []
ticker_systems_i32_f32 = []
ticker_systems_i8_f64 = []
ticker_systems_i16_f64 = []
ticker_systems_i32_f64 = []

ticker-types = [
    "ticker_type_i8_f32",
    "ticker_type_i16_f32",
    "ticker_type_i32_f32",
    "ticker_type_i8_f64",
    "ticker_type_i16_f64",
    "ticker_type_i32_f64",
]

ticker-systems = [
    "ticker_type_i8_f32",
    "ticker_type_i16_f32",
    "ticker_type_i32_f32",
    "ticker_type_i8_f64",
    "ticker_type_i16_f64",
    "ticker_type_i32_f64",
]

ticker-all = [
    "ticker_reflect",
    "ticker_serialize",
    "ticker_type_i8_f32",
    "ticker_type_i16_f32",
    "ticker_type_i32_f32",
    "ticker_type_i8_f64",
    "ticker_type_i16_f64",
    "ticker_type_i32_f64",
    "ticker_systems_i8_f32",
    "ticker_systems_i16_f32",
    "ticker_systems_i32_f32",
    "ticker_systems_i8_f64",
    "ticker_systems_i16_f64",
    "ticker_systems_i32_f64",
]
###########################################################################